Dict word lists still remain empty
